--- a/index.html
+++ b/index.html
@@ -166,6 +166,23 @@
           <span class="bg-primary-light text-primary-dark text-sm font-medium mr-2 px-2.5 py-0.5 rounded-full">Python</span>
         </p>
       </div>
+      <div class="bg-white p-6 rounded-xl shadow-lg card-hover flex flex-col">
+        <h3 class="text-2xl font-bold text-primary mb-3">Excursion</h3>
+        <p class="text-neutral-textlight mb-4 flex-grow">A  landing page built with HTML and CSS, featuring travel-themed content and a dynamic video background for an immersive user experience.</p>
+        <p><strong>Technologies:</strong> <span class="bg-primary-light text-primary-dark text-sm font-medium mr-2 px-2.5 py-0.5 rounded-full">HTML, CSS</span></p>
+        <div class="container mx-auto px-2 sm:px-4 lg:px-6 text-right">
+          <a href="https://github.com/SudarshanBhosale18/excursion.git" target="_blank" download class="bg-primary text-white font-semibold py-2 px-5 rounded-lg shadow-md hover:bg-primary-dark transition-colors duration-300 text-lg">View Code</a>
+          <a href="https://sudarshanbhosale18.github.io/excursion/" target="_blank" download class="bg-primary text-white font-semibold py-2 px-5 rounded-lg shadow-md hover:bg-primary-dark transition-colors duration-300 text-lg">Live Project</a>
+        </div>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-lg card-hover flex flex-col">
+        <h3 class="text-2xl font-bold text-primary mb-3">Colmar Academy</h3>
+        <p class="text-neutral-textlight mb-4 flex-grow">A responsive, multi-section website for a fictional academy, designed using a custom layout and Flexbox for modern, flexible structure.</p>
+        <p><strong>Technologies:</strong> <span class="bg-primary-light text-primary-dark text-sm font-medium mr-2 px-2.5 py-0.5 rounded-full">HTML, CSS</span></p>
+        <div class="container mx-auto px-2 sm:px-4 lg:px-6 text-right">
+          <a href="https://github.com/SudarshanBhosale18/Colmar_Academy.git" target="_blank" download class="bg-primary text-white font-semibold py-2 px-5 rounded-lg shadow-md hover:bg-primary-dark transition-colors duration-300 text-lg">View Code</a>
+          <a href=" https://sudarshanbhosale18.github.io/Colmar_Academy/" target="_blank" download class="bg-primary text-white font-semibold py-2 px-5 rounded-lg shadow-md hover:bg-primary-dark transition-colors duration-300 text-lg">Live Project</a>
+      </div>
     </div>
   </div>
 </section>
